--- a/fastapi-app/pyproject.toml
+++ b/fastapi-app/pyproject.toml
@@ -15,8 +15,10 @@ pydantic-settings = "^2.2.1"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
 asyncpg = "^0.29.0"
 alembic = "^1.13.1"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-pyjwt = "^2.8.0"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
+celery = "^5.4.0"
+redis = "^5.0.4"
+bcrypt = "^4.1.3"
 
 
 [tool.poetry.group.dev.dependencies]
